Fixed: overflow on the dropdown-list

--- a/themes/inbeat/assets/scss/pages/_cpm-calculator.scss
+++ b/themes/inbeat/assets/scss/pages/_cpm-calculator.scss
@@ -159,6 +159,7 @@ $pink: #B85172;
                 margin-left: 8px;
             }
             .dropdown-list{
+                overflow: hidden;
                 background: #FFFFFF;
                 border: 1px solid #DCDCDC;
                 box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.2);
